--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "server.js",
       "use": "@vercel/node",
       "config": { "includeFiles": ["dist/**"] }
     }
-  ],  
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+      "dest": "server.js"
     }
   ]
 }
