--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "src": "server.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "methods": ["OPTIONS"],
-      "dest": "/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"],
       "dest": "/server.js"
     }
   ]
