--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "./server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
+      "methods": ["OPTIONS"],
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"],
       "dest": "/server.js"
     }
   ]
